...
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XPI-RU-dOv">
                                <rect key="frame" x="173.66666666666666" y="775.66666666666663" width="45.666666666666657" height="34.333333333333371"/>
                                <accessibility key="accessibilityConfiguration" identifier="ok"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Ok"/>
                                <connections>
                                    <action selector="performOkButtonAction:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="GaY-Ce-x9d"/>
                                </connections>
                            </button>
...
